--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "eslint-plugin-vue": "^7.0.0",
+    "firebase": "^10.8.0",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
